--- a/cryptocurrency/package.json
+++ b/cryptocurrency/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+		"lint": "eslint . --ext .tsx --ext .ts",
+		"lint-fix": "eslint . --ext .tsx --ext .ts --fix"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -23,6 +25,23 @@
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.60.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+		"@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@vitest/coverage-c8": "^0.29.3",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^7.0.4",
+    "jsdom": "^21.1.1",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
+    "vitest": "^0.29.3"
   }
 }
