--- a/cryptocurrency/package.json
+++ b/cryptocurrency/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .tsx --ext .ts",
-    "lint-fix": "eslint . --ext .tsx --ext .ts --fix"
+    "lint-fix": "eslint . --ext .tsx --ext .ts --fix",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -37,6 +39,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "husky": "^7.0.4",
     "jsdom": "^21.1.1",
     "lint-staged": "^12.4.1",
