--- a/cryptocurrency/package.json
+++ b/cryptocurrency/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .tsx --ext .ts",
     "lint-fix": "eslint . --ext .tsx --ext .ts --fix",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "test:cypress": "start-server-and-test dev http://localhost:5173/cryptocurrency/ cypress",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -32,6 +34,7 @@
     "@typescript-eslint/parser": "^5.22.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
+    "cypress": "^12.9.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -45,6 +48,7 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "sass": "^1.60.0",
+    "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-react-icons": "^0.2.0",
