--- a/cryptocurrency/package.json
+++ b/cryptocurrency/package.json
@@ -12,9 +12,13 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "test:cypress": "start-server-and-test dev http://localhost:5173/cryptocurrency/ cypress",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@storybook/api": "^7.0.2",
+    "@storybook/client-api": "^7.0.2",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "react": "^18.2.0",
@@ -26,6 +30,13 @@
   },
   "devDependencies": {
     "@iconify/json": "^2.2.40",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/react": "^7.0.2",
+    "@storybook/react-vite": "^7.0.2",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.28",
@@ -42,13 +53,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.11",
     "gh-pages": "^5.0.0",
     "husky": "^7.0.4",
     "jsdom": "^21.1.1",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "prop-types": "^15.8.1",
     "sass": "^1.60.0",
     "start-server-and-test": "^2.0.0",
+    "storybook": "^7.0.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-react-icons": "^0.2.0",
