--- a/cryptocurrency/package.json
+++ b/cryptocurrency/package.json
@@ -14,13 +14,15 @@
     "test:cypress": "start-server-and-test dev http://localhost:5173/cryptocurrency/ cypress",
     "cypress": "cypress open",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest"
   },
   "dependencies": {
     "@storybook/api": "^7.0.2",
     "@storybook/client-api": "^7.0.2",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "msw": "^1.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -66,6 +68,9 @@
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-react-icons": "^0.2.0",
-    "vitest": "^0.29.3"
+    "vitest": "^0.29.8"
+  },
+  "test": {
+    "environment": "jsdom"
   }
 }
